Add some text to notebook

--- a/applications/object_tracking/Motion Based Object Detection.ipynb
+++ b/applications/object_tracking/Motion Based Object Detection.ipynb
@@ -28,6 +28,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here's two frames from a video of my cat Arya."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
@@ -61,6 +68,15 @@
     "\n",
     "show_bgr_im(frame0)\n",
     "show_bgr_im(frame1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Optical Flow\n",
+    "\n",
+    "Let's implement an optical flow solver, in this example we'll use the Horn-Schunk Jacobi method.  More info can be found [here](http://en.wikipedia.org/wiki/Horn–Schunck_method)"
    ]
   },
   {
@@ -99,7 +115,14 @@
     "        u_new = ubar - Ix * t\n",
     "        v_new = vbar - Iy * t\n",
     "        u, v = u_new, v_new\n",
-    "    return u, v\n"
+    "    return u, v"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We'll run it on our two frames and display it using a common technique for visualizing optical flow.  We'll use the color wheel to specify direction (each angle has a corresponding hue) and intensity to indicate magnitude."
    ]
   },
   {
@@ -139,6 +162,13 @@
     "hsv[..., 2] = mag\n",
     "flow = cv2.cvtColor(hsv, cv2.COLOR_HSV2BGR)\n",
     "show_bgr_im(flow)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we'll write a relatively simple algorithm to draw a box around regions of interest.  In this case, we'll use the magnitude of motion vectors and apply a histogram based segmentation technique.  If you think of a horizontal histogram, we're interested in clustered peaks which would indicate a moving object.  After performing a horizontal histogram, we can repeat the process vertically for our columns of interest.  This technique is not the most robust for a few reasons.  It does not take into account direction of motion (this would allow us to segment occluded objects if they were moving in seperate direction), and it does not work well with occluded objects in general.  However, for the purposes of this demo and these frames, this works well enough. "
    ]
   },
   {
@@ -266,6 +296,13 @@
     "windowed = np.copy(frame1)\n",
     "windows = get_boxes(mag, windowed)\n",
     "show_bgr_im(windowed)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, with a regions of interest, we can run these through our classifier to find out what the model thinks it is."
    ]
   },
   {
